objects/Program_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <formula>Account__r.Field_Account_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_First_Name__c</fullName>
        <formula>Account__r.Field_Account_Manager__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>To indicate status of Approval</description>
        <inlineHelpText>To indicate status of Approval</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending TM Approval</fullName>
                </value>
                <value>
                    <fullName>TM Approved</fullName>
                </value>
                <value>
                    <fullName>TM Rejected</fullName>
                </value>
                <value>
                    <fullName>RSD Approved</fullName>
                </value>
                <value>
                    <fullName>RSD Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To capture notes / comments related to the enrollment record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To capture notes / comments related to the enrollment record</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date__c</fullName>
        <description>Used to capture program enrollment end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to capture program enrollment end date</inlineHelpText>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Expiration_Date__c</fullName>
        <description>Used to capture program enrollment expiration date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to capture program enrollment expiration date</inlineHelpText>
        <label>Enrollment Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Invitation_Status__c</fullName>
        <description>Used to indicate enrolment invitation email is sent to the primary contact or not.</description>
        <inlineHelpText>Used to indicate enrolment invitation email is sent to the primary contact or not.</inlineHelpText>
        <label>Enrollment Invitation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Eligible</fullName>
                    <default>true</default>
                    <label>Not Eligible</label>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <description>Used to capture program enrollment start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to capture program enrollment start date</inlineHelpText>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Customer_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Customer Applied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IST_Sales_Rep_Email__c</fullName>
        <description>To store IST Sales Rep Email used for communication</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To store IST Sales Rep Email used for communication</inlineHelpText>
        <label>IST Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invitation_Link_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitation Link Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invitation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Days_Since_Invitation_Sent__c</fullName>
        <formula>TODAY() -  Invitation_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. Of Days Since Invitation Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Dealership_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the primary contact of the dealer.</description>
        <inlineHelpText>Used to store the primary contact of the dealer.</inlineHelpText>
        <label>Primary Dealership Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Used to display program name in flow</description>
        <formula>Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to display program name in flow</inlineHelpText>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recommended_for_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if dealer is recommended to be approved or not</description>
        <inlineHelpText>To indicate if dealer is recommended to be approved or not</inlineHelpText>
        <label>Recommended for Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the user who is the regional sales director of the dealer / account</description>
        <inlineHelpText>Used to store the user who is the regional sales director of the dealer / account</inlineHelpText>
        <label>Regional Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RSD_Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the user who is the manager of the dealer / account</description>
        <inlineHelpText>Used to store the user who is the manager of the dealer / account</inlineHelpText>
        <label>Sales Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Not eligible</fullName>
                </value>
                <value>
                    <fullName>In/under review by IST (use pre and post pending customer response)</fullName>
                </value>
                <value>
                    <fullName>Pending customer response (pending app completion) -In/under review by IST</fullName>
                </value>
                <value>
                    <fullName>Waiting on POA (manually updated by IST)</fullName>
                </value>
                <value>
                    <fullName>Verified by IST (manually updated by IST)</fullName>
                </value>
                <value>
                    <fullName>Under review by TM under review by RSD approved Rejected [with reasons] (do not call removes from eligibility)</fullName>
                </value>
                <value>
                    <fullName>TM will be reaching out to you soon Enrolled (start date)</fullName>
                </value>
                <value>
                    <fullName>Active (initiated at first sale)</fullName>
                </value>
                <value>
                    <fullName>Remove (for performance)</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the user who is the territory manager of the dealer / account</description>
        <inlineHelpText>Used to store the user who is the territory manager of the dealer / account</inlineHelpText>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TM_Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueProgAcc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UniqueProgAcc</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_POA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if dealer has given power of attorney or not</description>
        <inlineHelpText>To indicate if dealer has given power of attorney or not</inlineHelpText>
        <label>Valid POA</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Enrollment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>